добавлено классы в хедер

--- a/index.html
+++ b/index.html
@@ -5,29 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="">logo</a></li>
-          <li><a href="">Home</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Services</a></li>
-          <li><a href="">Blogs</a></li>
-          <li><a href="">Gift Finder</a></li>
+      <nav class="navigation">
+        <ul class="navigation-list list">
+          <li>
+            <a class="navigation-link link" href="">logo</a>
+          </li>
+          <li><a class="navigation-link link" href="">Home</a></li>
+          <li><a class="navigation-link link" href="">About Us</a></li>
+          <li><a class="navigation-link link" href="">Services</a></li>
+          <li><a class="navigation-link link" href="">Blogs</a></li>
+          <li><a class="navigation-link link" href="">Gift Finder</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <section>
-        <h1>Find a gift for your wife or girlfriend</h1>
-        <p>
+      <section class="hero">
+        <h1 class="hero-title">Find a gift for your wife or girlfriend</h1>
+        <p class="hero-text">
           Struggling to find a gift for your wife or girlfriend? No problem!
         </p>
-        <a href="">Find gift now</a>
+        <a class="hero-button" href="">Find gift now</a>
         <img src="./images/couple.jpg" alt="couple" width="719" height="700" />
       </section>
       <section>
