--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
-  <body>
-    <header>
+  <body class="main">
+    <header class="page-header">
+      <img class="logo" src="./images/Logo.jpg" alt="Logo" width="41" height="39">
       <nav class="navigation">
         <ul class="navigation-list list">
           <li>
@@ -38,29 +35,31 @@
         <p class="hero-text">
           Struggling to find a gift for your wife or girlfriend? No problem!
         </p>
-        <a class="hero-button" href="">Find gift now</a>
+        <a class="hero-button link" href="">Find gift now</a>
         <img src="./images/couple.jpg" alt="couple" width="719" height="700" />
       </section>
-      <section>
+      <section class="about">
         <img
           src="./images/cart_thanks.jpg"
           alt="cart thanks"
           width="721"
           height="600"
         />
-        <h2>How we work</h2>
-        <p>
+        <h2 class="about-title">How we work</h2>
+        <p class="about-text">
           We’ve actually already asked hundreds of women what they want, and
           made a database with the results. All you have to do is take our short
           survey that only takes seconds, and our proprietary algorithm will
           match you with a few perfect gift options.
         </p>
-        <a href="">Learn More</a>
+        <a class="about-button link" href="">Learn More</a>
       </section>
-      <section>
-        <h2>Gifts for all Occasions</h2>
-        <p>“Try our web app to find the best gifts for all occasions”</p>
-        <ul>
+      <section class="occasions">
+        <h2 class="occasions-title">Gifts for all Occasions</h2>
+        <p class="occasions-text">
+          “Try our web app to find the best gifts for all occasions”
+        </p>
+        <ul class="occasions-list list">
           <li>
             <img
               src="./images/baloon.jpg"
@@ -119,60 +118,76 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="ready-to-start">
         <h2 hidden>How started?</h2>
-        <b>Ready to get started?</b>
-        <p>Sign up or contact us</p>
-        <ul>
-          <li><a href="">Find gift now</a></li>
-          <li><a href="">how it works</a></li>
-        </ul>
-      </section>
-      <section>
-        <h2>Our Best Blogs Ever</h2>
-        <p>
-          “Try our blog to find the best tips and tricks to select your gift”
-        </p>
-        <img src="./images/couple2.jpg" alt="couple" width="400" height="370" />
-        <p>Mr. John Doe</p>
-        <h3>The best way to wish your wife</h3>
-        <a href="">Read More</a>
-      </section>
-      <section>
-        <h2 hidden>Blogs</h2>
-        <ul>
+        <b class="ready-title">Ready to get started?</b>
+        <p class="ready-text">Sign up or contact us</p>
+        <ul class="ready-list list">
           <li>
-            <h3>Database to find the gifts for your girlfriend</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore...
-            </p>
-            <a href="">Read More</a>
+            <a class="ready-finde-gift-button link" href="">Find gift now</a>
           </li>
           <li>
-            <h3>
-              How Artificial Intelligence read your mind to find the best gift
-            </h3>
-            <p>
+            <a class="ready-works-button link" href="">how it works</a>
+          </li>
+        </ul>
+      </section>
+      <section class="best-blog">
+        <h2 class="best-blog-title">Our Best Blogs Ever</h2>
+        <p class="best-blog-text">
+          “Try our blog to find the best tips and tricks to select your gift”
+        </p>
+        <div class="best-way">
+          <img
+            src="./images/couple2.jpg"
+            alt="couple"
+            width="400"
+            height="370"
+          />
+          <p class="best-way-text">Mr. John Doe</p>
+          <h3 class="best-way-title">The best way to wish your wife</h3>
+          <a class="best-way-button link" href="">Read More</a>
+        </div>
+      </section>
+
+      <section class="blogs">
+                <h2 hidden>Blogs</h2>
+
+        <ul class="blogs-list list">
+          <li>
+        <ul class="blogs-list list">
+            <h3 class="blog-list-tile">Database to find the gifts for your girlfriend</h3>
+            <p class="blog-text">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore...
             </p>
-            <a href="">Read More</a>
+            <a class="blog-link link" href="">Read More</a>
+          </li>
+          <li>
+            <h3 class="blog-list-tile">
+              How Artificial Intelligence read your mind to find the best gift
+            </h3>
+            <p class="blog-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore...
+            </p>
+            <a class="blog-link link" href="">Read More</a>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <ul>
-        <li><a href=""></a>Home</li>
-        <li><a href=""></a>About</li>
-        <li><a href=""></a>logo</li>
-        <li><a href=""></a>Service</li>
-        <li><a href=""></a>Blog</li>
+    <footer class="footer-menu">
+      <ul class="footer-menu-list list">
+        <li><a class="footer-menu-link link" href=""></a>Home</li>
+        <li><a class="footer-menu-link link" href=""></a>About</li>
+        <li><a class="footer-menu-link link" href=""></a>logo</li>
+        <li><a class="footer-menu-link link" href=""></a>Service</li>
+        <li><a class="footer-menu-link link" href=""></a>Blog</li>
       </ul>
-      <p>&#169; 2010 — 2020</p>
-      <a href="">Privacy — Terms</a>
+      
+      <div class="copywrite">
+      <p class="copywrite-text">&#169; 2010 — 2020</p>
+      <a class="copywrite-link link" href="">Privacy — Terms</a></div>
     </footer>
   </body>
 </html>
